# NLQ-Agent

./: .gitignore  LICENSE  README.md  config.py  pyproject.toml
api/: app.py
core/: executor.py  query_generator.py  response_generator.py
db/: connection.py  seed.py  test.py
llm/: engine.py
memory/: buffer.py
ui/: app.py
